--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Restless==0.14.0
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.7
@@ -6,6 +7,10 @@ Werkzeug==0.9.6
 astroid==1.2.0
 itsdangerous==0.24
 logilab-common==0.62.1
+mimerender==0.5.4
 pylint==1.3.0
+python-dateutil==2.2
+python-mimeparse==0.1.4
 pytz==2014.4
+six==1.7.3
 wsgiref==0.1.2
